--- a/themes/nostyle/layouts/partials/post_list.html
+++ b/themes/nostyle/layouts/partials/post_list.html
@@ -2,7 +2,7 @@
 
     {{ range .Paginator.Pages }}
 
-    {{ if not .Params.featured }}
+    {{ if not .Params.sugest }}
 
     <div class="col-md-4">
         <div class="card mb-4 product-wap rounded-0">
