--- a/themes/nostyle/layouts/partials/footer.html
+++ b/themes/nostyle/layouts/partials/footer.html
@@ -1,48 +1,24 @@
-<!-- Start Footer -->
-<footer class="bg-dark pt-5" id="tempaltemo_footer">
-    <div id="contact" class="container">
-        <div class="row">
+<footer>
+    <div id="about" class="footer">
+        <img src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
 
-            <div class="col-md-4 pt-2">
-                <img class="brand-img" src="{{ $.Site.Params.logotipo | relURL}}" alt="logotipo">
-                <ul class="list-unstyled text-light footer-link-list">
-                    <li>
-                        <i class="fa fa-envelope fa-fw"></i>
-                        <a class="text-decoration-none" href="mailto:lucietelima@gmail.com">dra.luciana.lima@gmail.com</a>
-                    </li>
-                    <li>
-                        <i class="fa-brands fa-instagram"></i>
-                        <a class="text-decoration-none" 
-                            href="https://www.instagram.com/luciete.artes/profilecard/?igsh=b212aXpycG4zZHRk">
+        <div class="container">
+            <ul>
+                <li>
+                    <div class="footer-brand">
+                        <span class="fa fa-envelope fa-fw"></span>
+                        <a href="mailto:lucietelima@gmail.com">dra.luciana.lima@gmail.com</a>
+                    </div>
+                </li>
+                <li>
+                    <div class="footer-link">
+                        <span class="fa-brands fa-instagram">&nbsp;</span>
+                        <a href="https://www.instagram.com/luciete.artes/profilecard/?igsh=b212aXpycG4zZHRk">
                             @dra.luciana.lima
                         </a>
-                    </li>
-                </ul>
-            </div>
-
-            <div class="col-md-4 pt-2">
-                <h2 class="h2 text-light border-bottom pb-3 border-light">Informações importantes</h2>
-                <ul class="list-unstyled text-light footer-link-list">
-                    <li><a class="text-decoration-none" href="/about">Sobre nós</a></li>
-                    <li><a class="text-decoration-none" href="/fluxo">Como vai ser a cerimônia</a></li>
-                    <li><a class="text-decoration-none" href="/politica">Acesso ao local de cerimônia</a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-
-    <div class="w-100 bg-black py-3">
-        <div class="container">
-            <div class="row pt-2">
-                <div class="col-12">
-                    <p class="text-left text-light">
-                        Copyright &copy; 2025 <b><a rel="sponsored" href="https://izaias.com.br" target="_blank">Izaias Lima</a></b>
-                        | Designed by <a rel="sponsored" href="https://templatemo.com/page/1" target="_blank">TemplateMo</a>
-                            | Powered by <a rel="sponsored" href="https://gohugo.io"
-                                target="_blank">Hugo</a>
-                    </p>
-                </div>
-            </div>
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
 
@@ -51,4 +27,3 @@
     {{- end }}
 
 </footer>
-<!-- End Footer -->
