--- a/themes/nostyle/layouts/posts/single.html
+++ b/themes/nostyle/layouts/posts/single.html
@@ -9,9 +9,9 @@
                         <img id="product-detail" class="card-img img-fluid" src="/posts/images/{{ .Params.image }}"
                             alt="{{ .Params.image }}">
                     </div>
-                    <div class="row">
-                        {{- partial "slide_images.html" . -}}
-                    </div>
+                    <!-- <div class="row">
+                        {- partial "slide_images.html" . -}
+                    </div> -->
                 </div>
 
                 <div class="col-lg-7 mt-5">
