--- a/themes/nostyle/layouts/partials/suggest.html
+++ b/themes/nostyle/layouts/partials/suggest.html
@@ -1,34 +1,43 @@
-{{ $res := where .Site.RegularPages "Params.suggest" true }}
-
-{{ range $res }}
-
-<div class="card">
-
-    <div class="image">
-        <a href="{{ .RelPermalink }}">
-            <img src="/posts/images/{{ .Params.image }}" class="img-fluid" alt="{{ .Params.image }}">
-        </a>
+<div id="suggest" class="container flex col center">
+    <div >
+        <h1>Lista sugestões de Presentes</h1>
     </div>
 
-    <div class="title">
-        <h2 class="h2">
-            <a class="text-decoration-none" href="{{ .RelPermalink }}">
-                {{ .Title }}
-            </a>
-        </h2>
-    </div>
+    <div class="cards flex center">
+        {{ $res := where .Site.RegularPages "Params.suggest" true }}
 
-    <div class="price">
-        <ul class="card-price list-unstyled d-flex justify-content-between">
-            {{if .Params.price }}
-            <li class="text-warning text-right">R$ {{ .Params.price }}</li>
-            {{ end }}
-        </ul>
-    </div>
+        {{ range $res }}
 
-    <div class="text">
-        <p>{{ .Params.summary}}</p>
+        <div class="card inverse">
+
+            <div class="image">
+                <a href="{{ .RelPermalink }}">
+                    <img src="/posts/images/{{ .Params.image }}" alt="{{ .Params.image }}">
+                </a>
+            </div>
+
+            <div class="title">
+                <h2 class="h2">
+                    <a class="text-decoration-none" href="{{ .RelPermalink }}">
+                        {{ .Title }}
+                    </a>
+                </h2>
+            </div>
+
+            <div class="price">
+                <ul class="card-price">
+                    {{if .Params.price }}
+                    <li class="text-warning text-right">R$ {{ .Params.price }}</li>
+                    {{ end }}
+                </ul>
+            </div>
+
+            <div class="message">
+                <p>{{ .Params.summary}}</p>
+            </div>
+        </div>
+
+        {{ end }}
+
     </div>
 </div>
-
-{{ end }}
