--- a/static/css/hero.css
+++ b/static/css/hero.css
@@ -1,6 +1,7 @@
 #hero-container {
     position: relative;
     width: 100vw;
+    margin-top: 82px;
     aspect-ratio: 16/9;
 }
 
@@ -20,14 +21,15 @@
     top: 0;
     left: 0;
     width: inherit;
+
+    & img {
+        width: inherit;
+        aspect-ratio: 16/9;
+        border-radius: 0;
+    }
 }
 
-.hero-image img {
-    width: inherit;
-    aspect-ratio: 16/9;
-}
-
-.hero-text {
+.hero-image .hero-text {
     display: flex;
     height: inherit;
     flex-direction: column;
