--- a/themes/nostyle/layouts/partials/footer.html
+++ b/themes/nostyle/layouts/partials/footer.html
@@ -23,4 +23,15 @@
             </ul>
         </div>
     </div>
+
+    <div class="copyright">
+        <hr/>
+        <p>Copyright &copy; {{ time.Now.Year }}
+            <span>Izaias Lima</span>&nbsp;<span>Workforce&nbsp;by&nbsp;templatemo</span>
+            </a>
+            &#8226;&nbsp;Images:&nbsp;<a href="https://freepik.com" target="_blank"
+                rel="nofollow noopener noreferrer">&nbsp;<span>Freepik.com</span>
+            </a>
+        </p>
+    </div>
 </footer>
