--- a/themes/nostyle/layouts/partials/info.html
+++ b/themes/nostyle/layouts/partials/info.html
@@ -5,7 +5,7 @@
             
             {{ range $res }}
             
-            <div class="card w-100">
+            <div class="card">
                 <div class="image">
                     <img src="/posts/images/{{ .Params.image }}" alt="{{ .Params.image }}">
             </div>
