--- a/themes/nostyle/layouts/partials/post_list.html
+++ b/themes/nostyle/layouts/partials/post_list.html
@@ -5,7 +5,7 @@
     {{ if not .Params.sugest }}
 
     <!-- <div class="col-md-4"> -->
-    <div class="card inverse flex item w-20 mb-4 product-wap rounded-0">
+    <div class="card inverse flex item mb-4 product-wap rounded-0">
         <div class="card image">
             <a href="{{ .Permalink }}" class="h3 text-decoration-none">
                 <img class="card-img rounded-0 img-fluid" src="/posts/images/{{ .Params.image }}">
